--- a/themes/advanced_v3_dark/advanced_v3_dark.css
+++ b/themes/advanced_v3_dark/advanced_v3_dark.css
@@ -1,4 +1,4 @@
-@import url('https://use.fontawesome.com/releases/v5.12.1/css/solid.css');
+@import url('https://use.fontawesome.com/releases/v5.15.1/css/solid.css');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:500|Roboto:400,700');
 
 /*Custom Icons*/
@@ -461,6 +461,7 @@ input[type=button] {
     font-weight     : 700;
     font-size       : 12px;
     padding         : 10px 15px;
+    margin          : 3px 2px 5px 1px;
 }
 
 input[type=button]:hover {
@@ -591,4 +592,24 @@ td#navi a.indent1[href*="javascript:logout()"]:hover {
 div#ident,
 table#container td#header div.title small {
     display: none;
+}
+
+select {
+    margin: 5px 0px 2px 0px;
+}
+
+.note-disabled,
+div#notice,
+div#survey-msg,
+div#survey-warn {
+    background  : none;
+    color       : #fff;
+    border-color: #fff;
+}
+
+.iperf_status_table,
+div#tools-grid {
+    margin: 0px 60px 10px;
+    border: none;
+    width : auto;
 }
